# ocr_handwritten_notes

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml  user_requirements.md
backend/: config.py  main.py
backend/prompts/: ocr_prompts.py
backend/routers/: config.py  dataset.py  ocr.py
backend/services/: credentials.py  inference_service.py  openai_service.py  scorers.py
backend/services/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: CredentialsModal.vue  DropZone.vue  ImagePanel.vue  ImagePreview.vue  LoadingSpinner.vue  MarkdownEditor.vue  OptionsForm.vue  ThemeToggle.vue
frontend/src/fixtures/: sample_ocr.md  testData.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: config.js  notes.js  theme.js
frontend/src/views/: CompareView.vue  EditorView.vue  UploadView.vue
