[project]
name = "ocr-app"
version = "0.1.0"
description = "OCR app to convert handwritten notes to markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "openai>=1.50.0",
    "pydantic-settings>=2.5.0",
    "weave>=0.52.37",
    "pillow>=10.0.0",
    "llm-guard>=0.3.0",
]
